--- a/.github/workflows/deploy-pm2.yml
+++ b/.github/workflows/deploy-pm2.yml
@@ -11,7 +11,7 @@ on:
         required: false
       PM2_PROCESS_NAME:
         type: string
-        required: true
+        required: false
     secrets:
       DEPLOY_HOST:
         required: true
@@ -27,7 +27,7 @@ jobs:
     name: build-app
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout ${{github.}}
         uses: actions/checkout@v4
       - name: Install bun
         uses: oven-sh/setup-bun@v2
@@ -42,7 +42,7 @@ jobs:
           echo "ARCHIVE=$ARCHIVE" >> $GITHUB_ENV
           echo "Created archive: $ARCHIVE"
       - run: |
-          DEPLOY_DIRECTORY="${{ secrets.DEPLOY_DIRECTORY || ("/home/" + secrets.DEPLOY_USERNAME) }}"
+          DEPLOY_DIRECTORY="${{ secrets.DEPLOY_DIRECTORY || format('/home/{0}', secrets.DEPLOY_USERNAME) }}"
           echo "DEPLOY_DIRECTORY=$DEPLOY_DIRECTORY" >> $GITHUB_ENV
 
       - name: Copy bundle to remote
@@ -67,7 +67,7 @@ jobs:
             RELEASES_DIR="$DEPLOY_DIR/releases"
 
             ARCHIVE_NAME="${{ env.ARCHIVE }}"
-            PM2_PROCESS_NAME="${{ secrets.PM2_PROCESS_NAME }}"
+            PM2_PROCESS_NAME="${{ secrets.PM2_PROCESS_NAME || format('{0}-{1}', github.repository.split('/')[1], inputs.ENV_NAME) }}"
 
             cd "$RELEASES_DIR"
             tar -xzf "$ARCHIVE_NAME"
