--- a/.github/workflows/deploy-pm2.yml
+++ b/.github/workflows/deploy-pm2.yml
@@ -27,7 +27,7 @@ jobs:
     name: build-app
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout ${{github.}}
+      - name: Checkout
         uses: actions/checkout@v4
       - name: Install bun
         uses: oven-sh/setup-bun@v2
