--- a/.github/workflows/deploy-pm2.yml
+++ b/.github/workflows/deploy-pm2.yml
@@ -12,21 +12,21 @@ on:
       PM2_PROCESS_NAME:
         type: string
         required: false
-    secrets:
-      HOST:
-        required: true
-      USERNAME:
-        required: true
-      PORT:
-        required: false
-      SSH_KEY:
-        required: true
+    # secrets:
+    #   DEPLOY_HOST:
+    #     required: true
+    #   DEPLOY_USERNAME:
+    #     required: true
+    #   DEPLOY_PORT:
+    #     required: false
+    #   DEPLOY_SSH_KEY:
+    #     required: true
 
 jobs:
   build:
     name: build-app
     runs-on: ubuntu-latest
-    environment: ${{ inputs.ENV_NAME }}
+    environment: staging
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,36 +35,36 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Run tests
-        run: bun test --pass-with-no-tests
+        run: bun test
 
       - name: Package with bun pm pack --quiet (capture filename)
         run: |
-          ARCHIVE=$(bun pm pack --quiet | tr -d '\n')
+          ARCHIVE=$(bun pm pack --quiet)
           echo "ARCHIVE=$ARCHIVE" >> $GITHUB_ENV
           echo "Created archive: $ARCHIVE"
 
       - name: Set DEPLOY_DIRECTORY env
         run: |
-          DEPLOY_DIRECTORY="${{ inputs.DEPLOY_DIRECTORY || format('/home/{0}', secrets.USERNAME) }}"
+          DEPLOY_DIRECTORY="${{ inputs.DEPLOY_DIRECTORY || format('/home/{0}', secrets.DEPLOY_USERNAME) }}"
           echo "DEPLOY_DIRECTORY=$DEPLOY_DIRECTORY" >> $GITHUB_ENV
 
       - name: Copy bundle to remote
         uses: appleboy/scp-action@v1
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.PORT }}
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USERNAME }}
+          key: ${{ secrets.DEPLOY_SSH_KEY }}
+          port: ${{ secrets.DEPLOY_PORT }}
           source: "${{ env.ARCHIVE }}"
           target: "${{ env.DEPLOY_DIRECTORY }}/releases/"
 
       - name: Deploy on remote and reload PM2
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_KEY }}
-          port: ${{ secrets.PORT || '22' }}
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USERNAME }}
+          key: ${{ secrets.DEPLOY_SSH_KEY }}
+          port: ${{ secrets.DEPLOY_PORT || '22' }}
           script: |
             set -euo pipefail
 
