--- a/.github/workflows/deploy-pm2.yml
+++ b/.github/workflows/deploy-pm2.yml
@@ -12,15 +12,15 @@ on:
       PM2_PROCESS_NAME:
         type: string
         required: false
-    # secrets:
-    #   DEPLOY_HOST:
-    #     required: true
-    #   DEPLOY_USERNAME:
-    #     required: true
-    #   DEPLOY_PORT:
-    #     required: false
-    #   DEPLOY_SSH_KEY:
-    #     required: true
+    secrets:
+      DEPLOY_HOST:
+        required: true
+      DEPLOY_USERNAME:
+        required: true
+      DEPLOY_PORT:
+        required: false
+      DEPLOY_SSH_KEY:
+        required: true
 
 jobs:
   build:
@@ -35,11 +35,11 @@ jobs:
       - name: Install dependencies
         run: bun install
       - name: Run tests
-        run: bun test
+        run: bun test --pass-with-no-tests
 
       - name: Package with bun pm pack --quiet (capture filename)
         run: |
-          ARCHIVE=$(bun pm pack --quiet)
+          ARCHIVE=$(bun pm pack --quiet | tr -d '\n')
           echo "ARCHIVE=$ARCHIVE" >> $GITHUB_ENV
           echo "Created archive: $ARCHIVE"
 
