--- a/.github/workflows/deploy-pm2.yml
+++ b/.github/workflows/deploy-pm2.yml
@@ -66,6 +66,8 @@ jobs:
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           port: ${{ secrets.DEPLOY_PORT || '22' }}
           script: |
+            set -euo pipefail
+
             DEPLOY_DIR="${{ env.DEPLOY_DIRECTORY }}"
             RELEASES_DIR="$DEPLOY_DIR/releases"
             ARCHIVE_NAME="${{ env.ARCHIVE }}"
@@ -82,6 +84,17 @@ jobs:
             cd "$RELEASES_DIR"
             tar -xzf "$ARCHIVE_NAME"
             rm -f "$ARCHIVE_NAME"
+
+            # Install bun (idempotent) and ensure it is on PATH
+            curl -fsSL https://bun.sh/install | bash
+            # bun installer puts bin in ~/.bun/bin; ensure PATH
+            export PATH="$HOME/.bun/bin:$PATH"
+
+            # Ensure pm2 is installed (install globally if missing)
+            if ! command -v pm2 >/dev/null 2>&1; then
+              # prefer pnpm/npm/yarn depending on your remote environment; use npm here
+              bun i -g pm2 --silent
+            fi
 
             SCRIPT_PATH=$(bun --silent -e "console.log(require('./package.json').main || '')" || true)
 
