--- a/.github/workflows/deploy-pm2.yml
+++ b/.github/workflows/deploy-pm2.yml
@@ -34,6 +34,8 @@ jobs:
         uses: oven-sh/setup-bun@v2
       - name: Install dependencies
         run: bun install
+      - name: Build application
+        run: bun run build
       - name: Run tests
         run: bun test --pass-with-no-tests
 
