--- a/.github/workflows/deploy-pm2.yml
+++ b/.github/workflows/deploy-pm2.yml
@@ -57,7 +57,7 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           port: ${{ secrets.DEPLOY_PORT }}
-          source: "${{ env.ARCHIVE }}"
+          source: "${{ env.ARCHIVE }} node_modules/*"
           target: "${{ env.DEPLOY_DIRECTORY }}/releases/"
 
       - name: Deploy on remote and reload PM2
@@ -86,6 +86,7 @@ jobs:
             cd "$RELEASES_DIR"
             tar -xzf "$ARCHIVE_NAME"
             rm -f "$ARCHIVE_NAME"
+            cp -r node_modules package
             cd package
 
             # Install bun (idempotent) and ensure it is on PATH
@@ -99,7 +100,7 @@ jobs:
               bun i -g pm2 --silent
             fi
 
-            SCRIPT_PATH=$(bun --silent -e "console.log(require('./package.json').main || '')" || true)
+            SCRIPT_PATH=$(bun --silent -e "console.log(require('./package.json').main)")
 
             if pm2 describe "$PM2_PROCESS_NAME" >/dev/null 2>&1; then
               pm2 restart "$PM2_PROCESS_NAME"
